fix(hero-image-only): change styling on small screens

--- a/src/styles/isomer-template/theme/_layout.scss
+++ b/src/styles/isomer-template/theme/_layout.scss
@@ -9,3 +9,8 @@
 .is-full-width {
   width: 100%;
 }
+
+.is-vh-centered {
+  align-items: center;
+  justify-content: center;
+}
